# choregraph

./: .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL-LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cla.yml  publish.yml
docs/: mkdocs.yml
docs/architecture/: xml-spec.md
docs/getting-started/: index.md
docs/pages/: index.md
docs/pages/architecture/: index.md  pipeline-flow.md
docs/pages/developer/: adding-transforms.md  index.md
docs/pages/getting-started/: installation.md  quickstart.md
docs/pages/reference/: index.md  metadata.md  parser.md  wrapper.md  xsd-catalogue.md
docs/reference/: builder.md  choregraph.md  hooks.md  loaders.md  viz.md
docs/reference/connectors/: dive.md
src/choregraph/: TransformGraph.xsd  __init__.py  _extras.py  _xsd_data.py  builder.py  choregraph.py  dtype_inference.py  fetcher.py  file_builder.py  hooks.py  json_input_guard.py  library.py  llm_config.py  loaders.py  metadata.py  parser.py  security.py  versions.py  viz.py  wrapper.py  xsd_catalogue_utils.py
src/choregraph/collection/: __init__.py  geo.py  image.py  library_excel.py  nlp.py  timeseries.py
src/choregraph/connectors/: dive.py  (+1 more)
tests/: conftest.py  test_builder.py  test_cache_proxy.py  test_cartograph_json.py  test_choregraph_facade.py  test_choregraph_lifecycle.py  test_collection_timeseries.py  test_dive_connector.py  test_docs_freshness.py  test_dtype_inference.py  test_edf_dataset.py  test_excel_tidying.py  test_execute_code.py  test_export_to_xml.py  test_fetcher.py  test_file_builder.py  test_flatten_json.py  test_forecast_time_series.py  test_hooks.py  test_json_input_guard.py  test_json_metadata.py  test_library_aggregations.py  test_library_filters.py  test_library_transforms.py  test_loaders.py  test_metadata.py  test_parser.py  test_repro_location.py  test_visibility_filtering.py  test_viz_server.py  test_wrapper_builder.py
tests/fixtures/: graph.json
(+14 files in other folders)
