[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "choregraph"
dynamic = ["version"]
description = "Data processing engine for the NVEIL Toolkit. Install via: pip install nveil"
authors = [{name = "NVEIL", email = "contact@nveil.com"}]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "kedro>=0.19.0",
    "kedro-datasets>=3.0.0",
    "pyarrow>=22.0.0",
    "pandas>=2.0.0",
    "lxml>=5.0.0",
    "python-dotenv",
    "pyedflib>=0.1.42",
    "genson>=1.3.0",
]

[project.optional-dependencies]
extra = [
    "Pillow",
    "kedro-datasets[pillow]>=3.0.0",
    "geopandas",
    "geonamescache",
    "scikit-learn>=1.3.0",
    "statsmodels",
    "langdetect",
    "simplemma",
    "unidecode",
    "rapidfuzz",
]
dicom = [
    "pydicom>=2.4",
]
server = [
    "langchain-google-genai==4.2.1",
    "kedro-viz>=12.2.0",
    "openpyxl",
    "pyexcel",
    "pyexcel-xlsx",
    "pyexcel-xls",
    "pyexcel-ods3",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-section-index>=0.3.8",
]

[project.urls]
Homepage = "https://nveil.com"
Documentation = "https://docs.nveil.com"
"NVEIL Toolkit" = "https://pypi.org/project/nveil/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "timeout: test execution timeout (requires pytest-timeout)",
]

[tool.coverage.run]
source = ["choregraph"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
choregraph = ["*.xsd", "assets/**/*"]

# XSD and asset files are included in the (pure-Python) wheel.

